Exercice 8 que pour la partie "Game" (non compilable car pas eu le temps de corriger les Promise)
