# public/swagger.json
@@ -32,6 +32,70 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"GameOutputDTO": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"title": {
+						"type": "string"
+					},
+					"console": {
+						"properties": {
+							"name": {
+								"type": "string"
+							},
+							"id": {
+								"type": "number",
+								"format": "double"
+							}
+						},
+						"required": [
+							"name",
+							"id"
+						],
+						"type": "object"
+					}
+				},
+				"required": [
+					"id",
+					"title",
+					"console"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"GameInputDTO": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"console_id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"title",
+					"console_id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Partial_GameInputDTO_": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"console_id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
 			"ConsoleDTO": {
 				"properties": {
 					"id": {
@@ -48,30 +112,6 @@
 				"required": [
 					"name",
 					"manufacturer"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"GameDTO": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"title": {
-						"type": "string"
-					},
-					"console": {
-						"$ref": "#/components/schemas/ConsoleDTO"
-					},
-					"console_id": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"title",
-					"console_id"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -258,7 +298,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/GameDTO"
+										"$ref": "#/components/schemas/GameOutputDTO"
 									},
 									"type": "array"
 								}
@@ -280,7 +320,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/GameDTO"
+									"$ref": "#/components/schemas/GameOutputDTO"
 								}
 							}
 						}
@@ -296,7 +336,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/GameDTO"
+								"$ref": "#/components/schemas/GameInputDTO"
 							}
 						}
 					}
@@ -314,7 +354,7 @@
 								"schema": {
 									"allOf": [
 										{
-											"$ref": "#/components/schemas/GameDTO"
+											"$ref": "#/components/schemas/GameOutputDTO"
 										}
 									],
 									"nullable": true
@@ -340,7 +380,7 @@
 				]
 			},
 			"patch": {
-				"operationId": "UpdateConsole",
+				"operationId": "UpdateGame",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -349,7 +389,7 @@
 								"schema": {
 									"allOf": [
 										{
-											"$ref": "#/components/schemas/GameDTO"
+											"$ref": "#/components/schemas/GameOutputDTO"
 										}
 									],
 									"nullable": true
@@ -378,7 +418,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/GameDTO"
+								"$ref": "#/components/schemas/Partial_GameInputDTO_"
 							}
 						}
 					}
@@ -613,7 +653,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/GameDTO"
+										"$ref": "#/components/schemas/GameOutputDTO"
 									},
 									"type": "array"
 								}
