# src/controllers/game.controller.ts
@@ -1,41 +1,38 @@
 import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags} from "tsoa";
-import { GameDTO } from "../dto/game.dto";
 import { gameService } from "../services/game.service";
-import {ConsoleDTO} from "../dto/console.dto";
-import {consoleService} from "../services/console.service";
-import {Review} from "../models/review.model";
 import {ReviewDTO} from "../dto/review.dto";
+import {GameInputDTO, GameOutputDTO} from "../dto/game.dto";
 
 @Route("games")
 @Tags("Games")
 export class GameController extends Controller {
   @Get("/")
-  public async getAllGames(): Promise<GameDTO[]> {
+  public async getAllGames(): Promise<GameOutputDTO[]> {
     return gameService.getAllGames();
   }
 
   @Get("{id}")
-  public async getGameById(@Path() id: number): Promise<GameDTO | null> {
+  public async getGameById(@Path() id: number): Promise<GameOutputDTO | null> {
     return gameService.getGameById(id);
   }
 
   // Crée un nouveau jeu
   @Post("/")
   public async createGame(
-      @Body() requestBody: GameDTO
-  ): Promise<GameDTO> {
+      @Body() requestBody: GameInputDTO
+  ): Promise<GameOutputDTO> {
     const { title, console_id } = requestBody;
-    return gameService.createGame(title, console_id);
+    return gameService.createGame({ title, console_id });
   }
 
   // Met à jour un jeu par ID
   @Patch("{id}")
-  public async updateConsole(
+  public async updateGame(
       @Path() id: number,
-      @Body() requestBody: GameDTO
-  ): Promise<GameDTO | null> {
+      @Body() requestBody: Partial<GameInputDTO>
+  ): Promise<GameOutputDTO | null> {
     const { title, console_id } = requestBody;
-    return gameService.updateGame(id, title, console_id);
+    return gameService.updateGame(id, {title, console_id});
   }
 
   // Supprime un jeu par ID
